Implemented lazy allocation of backing array in lists, plus some fixes